--- a/readme.html
+++ b/readme.html
@@ -13,7 +13,8 @@
 
     <h1>Synchronize the Database</h1>
     <p>
-        This project has default settings for the database (it uses sqlite).
+        (it uses sqlite).
+        (it uses sqlite).
         If you need a super user, you'll need to create one before running the project.
     </p>
 
